# OpenCodeUI

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.standalone.yml  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: docker-backend.yml  docker-gateway.yml  release.yml
docker/: Caddyfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.gateway  backend-entrypoint.sh  entrypoint-gateway.sh  frontend-entrypoint.sh
scripts/: bump-version.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-router/: Cargo.toml
src-router/src/: caddy.rs  config.rs  main.rs  router.html  router.rs  scanner.rs  state.rs
src-tauri/: Cargo.toml  app-icon.manifest.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/app/: dir_state.rs  mod.rs  service.rs
src-tauri/src/app/commands/: mod.rs  opencode.rs  sse.rs  utils.rs
src-tauri/src/app/sse/: connect_args.rs  event.rs  mod.rs  state.rs
src/api/: command.ts  events.ts  http.test.ts  http.ts  pty.ts
src/components/: BottomPanel.tsx  CloseServiceDialog.tsx  CodeBlock.tsx  CodePreview.test.tsx  CodePreview.tsx  CommandPalette.tsx  ContentBlock.tsx  DiffModal.tsx  DiffView.test.tsx  DiffView.tsx  DiffViewer.test.tsx  DiffViewer.tsx  FileExplorer.tsx  FullscreenViewer.test.tsx  FullscreenViewer.tsx  Icons.tsx  MarkdownRenderer.test.tsx  MarkdownRenderer.tsx  McpPanel.tsx  MultiFileDiffModal.test.tsx  MultiFileDiffModal.tsx  OutlineIndex.tsx  PanelContainer.tsx  PreviewTabsBar.tsx  RightPanel.tsx  SessionChangesPanel.test.tsx  SessionChangesPanel.tsx  SkillPanel.tsx  Terminal.tsx  TerminalPanel.tsx  ToastContainer.tsx  WorktreePanel.tsx  index.ts
src/constants/: animation.ts  api.ts  app.ts  index.ts  pagination.ts  storage.ts  ui.ts
src/contexts/: DirectoryContext.shared.ts  DirectoryContext.tsx
src/hooks/: index.ts  sessionStatsUtils.ts  useCancelHint.ts  useChatSession.ts  useCloseServiceDialog.ts  useDynamicVirtualScroll.ts  useFileExplorer.test.tsx  useFileExplorer.ts  useGitWorkspaceCatalog.ts  useGlobalEvents.test.tsx  useGlobalEvents.ts  useImageCompressor.ts  useInView.ts  useInputCapabilities.ts  useModalAnimation.ts  usePresence.ts  useProject.ts  useResponsiveMaxHeight.ts  useRevertState.ts  useSessionManager.ts  useSessions.test.tsx  useSessions.ts  useSyntaxHighlight.ts  useTheme.ts  useVerticalSplitResize.ts  useViewportHeight.ts
src/lib/: overlayScrollbar.ts
src/store/: activeSessionStore.ts  autoApproveStore.ts  changeScopeStore.ts  childSessionStore.ts  index.ts  keybindingStore.ts  layoutStore.test.ts  layoutStore.ts  messageStore.test.ts  messageStore.ts  messageStoreHooks.ts  messageStoreTypes.ts  notificationStore.ts  (+7 more)
(+114 files in other folders)
