[package]
name = "opencodeui-router"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["http2"] }
base64 = "0.22.1"
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["release_max_level_info"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = [
  "fs",
  "process",
  "macros",
  "net",
  "parking_lot",
  "rt-multi-thread",
  "signal",
  "time"
] }

[profile.release]
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
