[package]
name = "opencodeui"
version = "0.1.10"
description = "OpenCode UI - Tauri Mobile App"
authors = ["you"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
strip = true
