[package]
name = "opencodeui"
version = "0.5.1"
description = "OpenCode UI - Tauri Mobile App"
authors = ["lehhair"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"
rust-version = "1.85.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "app_lib"

[dependencies]
futures-util = "0.3"
log = "0.4"
papaya = "0.2.3"
rapidhash = { version = "4.4.1", features = ["unsafe"] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "stream"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = "s"
